--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -52,11 +52,11 @@ jobs:
         script-file: "${{ env.NSIS_SCRIPT }}"
         additional-plugin-paths: ${{ github.workspace }}/NSIS_Plugins/Plugins
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1.0.0
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: installsig.exe
-        path: installsig.exe
+        name: nsis-installer
+        path: installer.exe
         
 
 
