--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      RELEASE_VERSION: ${{ github.event.release.tag_name }}
+      RELEASE_VERSION: 5.111
       BUCKET_NAME: github-release-files-storage
       CONDA_DIR: C:\Miniconda
       NSIS_SCRIPT: D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows\nsis-install-compiler.nsi
@@ -31,7 +31,7 @@ jobs:
 
     - name: Append VERSION to NSIS script
       run: |
-        echo !define VERSION "${{ github.event.release.tag_name }}" > newFile.nsi
+        echo !define VERSION "${{ env.RELEASE_VERSION }}" > newFile.nsi
         type "D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows\nsis-install-compiler.nsi" >> newFile.nsi
         move /Y newFile.nsi "D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows\nsis-install-compiler.nsi"
       shell: cmd
