--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -42,9 +42,17 @@ jobs:
         script-file: "${{ env.NSIS_DIR }}/nsis-install-compiler.nsi"
         additional-plugin-paths: ${{ github.workspace }}/NSIS_Plugins/Plugins
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload .exe as release asset
+      uses: actions/upload-release-asset@v1
       with:
-        name: nsis-installer
-        path: "${{ env.NSIS_DIR }}/EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
+        upload_url: ${{ steps.get_release.outputs.release_id }}
+        asset_path: "${{ env.NSIS_DIR }}/EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
+        asset_name: "EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
+        asset_content_type: application/octet-stream
+
+    # - name: Upload Artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: nsis-installer
+    #     path: "${{ env.NSIS_DIR }}/EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
 
