--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -1,9 +1,9 @@
 name: Build Windows release
 
 on:
-  release:
-    types:
-      - published
+  # release:
+  #   types:
+  #     - published
   workflow_dispatch:
 
 jobs:
