--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Upload .exe as release asset
       uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ steps.get_release.outputs.release_id }}
+        upload_url: https://github.com/PetervanLunteren/EcoAssist-experiments/releases/tag/${{ env.RELEASE_VERSION }}
         asset_path: "${{ env.NSIS_DIR }}/EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
         asset_name: "EcoAssist-${{ env.RELEASE_VERSION }}-windows.exe"
         asset_content_type: application/octet-stream
