--- a/.github/workflows/nsis-test.yml
+++ b/.github/workflows/nsis-test.yml
@@ -12,7 +12,7 @@ jobs:
 
 
     env:
-      RELEASE_VERSION: 5.111
+      RELEASE_VERSION: ${{ github.event.release.tag_name }}
       BUCKET_NAME: github-release-files-storage
       CONDA_DIR: C:\Miniconda
       NSIS_DIR: D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows
@@ -54,7 +54,7 @@ jobs:
           const release = await github.rest.repos.getReleaseByTag({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            tag: 'v${{ env.RELEASE_VERSION }}',
+            tag: '${{ env.RELEASE_VERSION }}',
           })
           return release.data.upload_url
     
