--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -215,14 +215,14 @@ jobs:
           tar -xf "${{ github.workspace }}/Inetc_plugin.zip"
           7z x -o"${{ github.workspace }}/NSIS_Plugins" "${{ github.workspace }}/Inetc_plugin.zip"
 
-      - name: Append VERSION to NSIS script
-        shell: pwsh
-        run: |
-          $root = "$env:USERPROFILE\EcoAssist"
-          $version = "${{ env.RELEASE_VERSION }}"
-          Set-Content -Path "newFile.nsi" -Value "!define VERSION `$version`"
-          Get-Content -Path "$root\install_files\windows\nsis-install-compiler.nsi" | Add-Content -Path "newFile.nsi"
-          Move-Item -Force -Path "newFile.nsi" -Destination "$root\install_files\windows\nsis-install-compiler.nsi"
+      # - name: Append VERSION to NSIS script
+      #   shell: pwsh
+      #   run: |
+      #     $root = "$env:USERPROFILE\EcoAssist"
+      #     $version = "${{ env.RELEASE_VERSION }}"
+      #     Set-Content -Path "newFile.nsi" -Value "!define VERSION `$version`"
+      #     Get-Content -Path "$root\install_files\windows\nsis-install-compiler.nsi" | Add-Content -Path "newFile.nsi"
+      #     Move-Item -Force -Path "newFile.nsi" -Destination "$root\install_files\windows\nsis-install-compiler.nsi"
   
       - name: Append VERSION to NSIS script
         shell: cmd
