--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -263,7 +263,13 @@ jobs:
             // Write the upload URL to the environment file instead of using set-output
             const fs = require('fs');
             fs.appendFileSync(process.env.GITHUB_ENV, `UPLOAD_URL=${release.data.upload_url}\n`);
-      
+
+      - name: Append VERSION to NSIS script
+        shell: cmd
+        run: |
+          echo Listing contents of "D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows\":
+          dir "D:\a\EcoAssist-experiments\EcoAssist-experiments\install_files\windows\"
+
       - name: Upload Asset to GitHub Release
         uses: actions/upload-release-asset@v1
         with:
