--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -239,12 +239,10 @@ jobs:
           echo Listing contents of %root%\EcoAssist\install_files\windows:
           dir "%root%\EcoAssist\install_files\windows"
 
-          
           echo !define VERSION "${{ env.RELEASE_VERSION }}" > newFile.nsi
-          echo !define VERSION "${{ env.RELEASE_VERSION }}"
-          type "%root%\EcoAssist\install_files\windows\nsis-install-compiler.nsi" >> newFile.nsi
-          move /Y newFile.nsi "%root%\EcoAssist\install_files\windows\nsis-install-compiler.nsi"
-  
+          type "%GITHUB_WORKSPACE%\EcoAssist\install_files\windows\nsis-install-compiler.nsi" >> newFile.nsi
+          move /Y newFile.nsi "%GITHUB_WORKSPACE%\EcoAssist\install_files\windows\nsis-install-compiler.nsi"
+
       - name: Create NSIS installer
         uses: joncloud/makensis-action@publish
         with:
